--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "yup": "^0.28.4"
   },
   "scripts": {
-    "start": "NODE_ENV=development react-scripts start",
-    "dev": "NODE_ENV=production react-scripts start",
+    "dev": "NODE_ENV=development react-scripts start",
+    "start": "NODE_ENV=production react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
